src/PhialeGis/Core/PhialeGis.Library.Dsl/Generated/PhialeDslParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from PhialeDslParser.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace PhialeGis.Library.Dsl {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
[System.CLSCompliant(false)]
public partial class PhialeDslParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		KW_ZOOMIN=1, KW_ZOOMOUT=2, KW_ZOOM=3, KW_ADD=4, KW_LINESTRING=5, NUMBER=6, 
		SEMI=7, WS=8, COMMENT=9, PT_UNDO=10, PT_ABS=11, PT_REL=12, PT_POLAR=13, 
		PT_WS=14;
	public const int
		RULE_script = 0, RULE_command = 1, RULE_zoomIn = 2, RULE_zoomOut = 3, 
		RULE_zoom = 4, RULE_addLineStart = 5, RULE_pointsLine = 6, RULE_ptAbs = 7, 
		RULE_ptRel = 8, RULE_ptPolar = 9, RULE_ptUndo = 10, RULE_emptyLine = 11;
	public static readonly string[] ruleNames = {
		"script", "command", "zoomIn", "zoomOut", "zoom", "addLineStart", "pointsLine", 
		"ptAbs", "ptRel", "ptPolar", "ptUndo", "emptyLine"
	};

	private static readonly string[] _LiteralNames = {
		null, "'ZoomIn'", "'ZoomOut'", "'Zoom'", "'Add'", "'LineString'", null, 
		"';'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "KW_ZOOMIN", "KW_ZOOMOUT", "KW_ZOOM", "KW_ADD", "KW_LINESTRING", 
		"NUMBER", "SEMI", "WS", "COMMENT", "PT_UNDO", "PT_ABS", "PT_REL", "PT_POLAR", 
		"PT_WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "PhialeDslParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static PhialeDslParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public PhialeDslParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public PhialeDslParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ScriptContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(PhialeDslParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public CommandContext[] command() {
			return GetRuleContexts<CommandContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public CommandContext command(int i) {
			return GetRuleContext<CommandContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] SEMI() { return GetTokens(PhialeDslParser.SEMI); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMI(int i) {
			return GetToken(PhialeDslParser.SEMI, i);
		}
		public ScriptContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_script; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPhialeDslParserListener typedListener = listener as IPhialeDslParserListener;
			if (typedListener != null) typedListener.EnterScript(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPhialeDslParserListener typedListener = listener as IPhialeDslParserListener;
			if (typedListener != null) typedListener.ExitScript(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPhialeDslParserVisitor<TResult> typedVisitor = visitor as IPhialeDslParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitScript(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ScriptContext script() {
		ScriptContext _localctx = new ScriptContext(Context, State);
		EnterRule(_localctx, 0, RULE_script);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 30;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 30L) != 0)) {
				{
				{
				State = 24;
				command();
				State = 26;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==SEMI) {
					{
					State = 25;
					Match(SEMI);
					}
				}

				}
				}
				State = 32;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 33;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CommandContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ZoomInContext zoomIn() {
			return GetRuleContext<ZoomInContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ZoomOutContext zoomOut() {
			return GetRuleContext<ZoomOutContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ZoomContext zoom() {
			return GetRuleContext<ZoomContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AddLineStartContext addLineStart() {
			return GetRuleContext<AddLineStartContext>(0);
		}
		public CommandContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_command; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPhialeDslParserListener typedListener = listener as IPhialeDslParserListener;
			if (typedListener != null) typedListener.EnterCommand(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPhialeDslParserListener typedListener = listener as IPhialeDslParserListener;
			if (typedListener != null) typedListener.ExitCommand(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPhialeDslParserVisitor<TResult> typedVisitor = visitor as IPhialeDslParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCommand(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CommandContext command() {
		CommandContext _localctx = new CommandContext(Context, State);
		EnterRule(_localctx, 2, RULE_command);
		try {
			State = 39;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case KW_ZOOMIN:
				EnterOuterAlt(_localctx, 1);
				{
				State = 35;
				zoomIn();
				}
				break;
			case KW_ZOOMOUT:
				EnterOuterAlt(_localctx, 2);
				{
				State = 36;
				zoomOut();
				}
				break;
			case KW_ZOOM:
				EnterOuterAlt(_localctx, 3);
				{
				State = 37;
				zoom();
				}
				break;
			case KW_ADD:
				EnterOuterAlt(_localctx, 4);
				{
				State = 38;
				addLineStart();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ZoomInContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode KW_ZOOMIN() { return GetToken(PhialeDslParser.KW_ZOOMIN, 0); }
		public ZoomInContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_zoomIn; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPhialeDslParserListener typedListener = listener as IPhialeDslParserListener;
			if (typedListener != null) typedListener.EnterZoomIn(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPhialeDslParserListener typedListener = listener as IPhialeDslParserListener;
			if (typedListener != null) typedListener.ExitZoomIn(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPhialeDslParserVisitor<TResult> typedVisitor = visitor as IPhialeDslParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitZoomIn(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ZoomInContext zoomIn() {
		ZoomInContext _localctx = new ZoomInContext(Context, State);
		EnterRule(_localctx, 4, RULE_zoomIn);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 41;
			Match(KW_ZOOMIN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ZoomOutContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode KW_ZOOMOUT() { return GetToken(PhialeDslParser.KW_ZOOMOUT, 0); }
		public ZoomOutContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_zoomOut; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPhialeDslParserListener typedListener = listener as IPhialeDslParserListener;
			if (typedListener != null) typedListener.EnterZoomOut(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPhialeDslParserListener typedListener = listener as IPhialeDslParserListener;
			if (typedListener != null) typedListener.ExitZoomOut(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPhialeDslParserVisitor<TResult> typedVisitor = visitor as IPhialeDslParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitZoomOut(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ZoomOutContext zoomOut() {
		ZoomOutContext _localctx = new ZoomOutContext(Context, State);
		EnterRule(_localctx, 6, RULE_zoomOut);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 43;
			Match(KW_ZOOMOUT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ZoomContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode KW_ZOOM() { return GetToken(PhialeDslParser.KW_ZOOM, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NUMBER() { return GetToken(PhialeDslParser.NUMBER, 0); }
		public ZoomContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_zoom; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPhialeDslParserListener typedListener = listener as IPhialeDslParserListener;
			if (typedListener != null) typedListener.EnterZoom(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPhialeDslParserListener typedListener = listener as IPhialeDslParserListener;
			if (typedListener != null) typedListener.ExitZoom(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPhialeDslParserVisitor<TResult> typedVisitor = visitor as IPhialeDslParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitZoom(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ZoomContext zoom() {
		ZoomContext _localctx = new ZoomContext(Context, State);
		EnterRule(_localctx, 8, RULE_zoom);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 45;
			Match(KW_ZOOM);
			State = 46;
			Match(NUMBER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AddLineStartContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode KW_ADD() { return GetToken(PhialeDslParser.KW_ADD, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode KW_LINESTRING() { return GetToken(PhialeDslParser.KW_LINESTRING, 0); }
		public AddLineStartContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_addLineStart; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPhialeDslParserListener typedListener = listener as IPhialeDslParserListener;
			if (typedListener != null) typedListener.EnterAddLineStart(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPhialeDslParserListener typedListener = listener as IPhialeDslParserListener;
			if (typedListener != null) typedListener.ExitAddLineStart(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPhialeDslParserVisitor<TResult> typedVisitor = visitor as IPhialeDslParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAddLineStart(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AddLineStartContext addLineStart() {
		AddLineStartContext _localctx = new AddLineStartContext(Context, State);
		EnterRule(_localctx, 10, RULE_addLineStart);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 48;
			Match(KW_ADD);
			State = 49;
			Match(KW_LINESTRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PointsLineContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public PtAbsContext ptAbs() {
			return GetRuleContext<PtAbsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PtRelContext ptRel() {
			return GetRuleContext<PtRelContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PtPolarContext ptPolar() {
			return GetRuleContext<PtPolarContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PtUndoContext ptUndo() {
			return GetRuleContext<PtUndoContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public EmptyLineContext emptyLine() {
			return GetRuleContext<EmptyLineContext>(0);
		}
		public PointsLineContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_pointsLine; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPhialeDslParserListener typedListener = listener as IPhialeDslParserListener;
			if (typedListener != null) typedListener.EnterPointsLine(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPhialeDslParserListener typedListener = listener as IPhialeDslParserListener;
			if (typedListener != null) typedListener.ExitPointsLine(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPhialeDslParserVisitor<TResult> typedVisitor = visitor as IPhialeDslParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPointsLine(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PointsLineContext pointsLine() {
		PointsLineContext _localctx = new PointsLineContext(Context, State);
		EnterRule(_localctx, 12, RULE_pointsLine);
		try {
			State = 56;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case PT_ABS:
				EnterOuterAlt(_localctx, 1);
				{
				State = 51;
				ptAbs();
				}
				break;
			case PT_REL:
				EnterOuterAlt(_localctx, 2);
				{
				State = 52;
				ptRel();
				}
				break;
			case PT_POLAR:
				EnterOuterAlt(_localctx, 3);
				{
				State = 53;
				ptPolar();
				}
				break;
			case PT_UNDO:
				EnterOuterAlt(_localctx, 4);
				{
				State = 54;
				ptUndo();
				}
				break;
			case Eof:
				EnterOuterAlt(_localctx, 5);
				{
				State = 55;
				emptyLine();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PtAbsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PT_ABS() { return GetToken(PhialeDslParser.PT_ABS, 0); }
		public PtAbsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ptAbs; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPhialeDslParserListener typedListener = listener as IPhialeDslParserListener;
			if (typedListener != null) typedListener.EnterPtAbs(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPhialeDslParserListener typedListener = listener as IPhialeDslParserListener;
			if (typedListener != null) typedListener.ExitPtAbs(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPhialeDslParserVisitor<TResult> typedVisitor = visitor as IPhialeDslParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPtAbs(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PtAbsContext ptAbs() {
		PtAbsContext _localctx = new PtAbsContext(Context, State);
		EnterRule(_localctx, 14, RULE_ptAbs);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 58;
			Match(PT_ABS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PtRelContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PT_REL() { return GetToken(PhialeDslParser.PT_REL, 0); }
		public PtRelContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ptRel; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPhialeDslParserListener typedListener = listener as IPhialeDslParserListener;
			if (typedListener != null) typedListener.EnterPtRel(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPhialeDslParserListener typedListener = listener as IPhialeDslParserListener;
			if (typedListener != null) typedListener.ExitPtRel(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPhialeDslParserVisitor<TResult> typedVisitor = visitor as IPhialeDslParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPtRel(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PtRelContext ptRel() {
		PtRelContext _localctx = new PtRelContext(Context, State);
		EnterRule(_localctx, 16, RULE_ptRel);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 60;
			Match(PT_REL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PtPolarContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PT_POLAR() { return GetToken(PhialeDslParser.PT_POLAR, 0); }
		public PtPolarContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ptPolar; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPhialeDslParserListener typedListener = listener as IPhialeDslParserListener;
			if (typedListener != null) typedListener.EnterPtPolar(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPhialeDslParserListener typedListener = listener as IPhialeDslParserListener;
			if (typedListener != null) typedListener.ExitPtPolar(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPhialeDslParserVisitor<TResult> typedVisitor = visitor as IPhialeDslParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPtPolar(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PtPolarContext ptPolar() {
		PtPolarContext _localctx = new PtPolarContext(Context, State);
		EnterRule(_localctx, 18, RULE_ptPolar);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 62;
			Match(PT_POLAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PtUndoContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PT_UNDO() { return GetToken(PhialeDslParser.PT_UNDO, 0); }
		public PtUndoContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ptUndo; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPhialeDslParserListener typedListener = listener as IPhialeDslParserListener;
			if (typedListener != null) typedListener.EnterPtUndo(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPhialeDslParserListener typedListener = listener as IPhialeDslParserListener;
			if (typedListener != null) typedListener.ExitPtUndo(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPhialeDslParserVisitor<TResult> typedVisitor = visitor as IPhialeDslParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPtUndo(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PtUndoContext ptUndo() {
		PtUndoContext _localctx = new PtUndoContext(Context, State);
		EnterRule(_localctx, 20, RULE_ptUndo);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 64;
			Match(PT_UNDO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EmptyLineContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(PhialeDslParser.Eof, 0); }
		public EmptyLineContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_emptyLine; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPhialeDslParserListener typedListener = listener as IPhialeDslParserListener;
			if (typedListener != null) typedListener.EnterEmptyLine(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPhialeDslParserListener typedListener = listener as IPhialeDslParserListener;
			if (typedListener != null) typedListener.ExitEmptyLine(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPhialeDslParserVisitor<TResult> typedVisitor = visitor as IPhialeDslParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEmptyLine(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public EmptyLineContext emptyLine() {
		EmptyLineContext _localctx = new EmptyLineContext(Context, State);
		EnterRule(_localctx, 22, RULE_emptyLine);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 66;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}


	public static readonly ATN _ATN =
		new ATNDeserializer().Deserialize(_serializedATN);


}
} // namespace PhialeGis.Library.Dsl
